feat: add header component

--- a/src/index.scss
+++ b/src/index.scss
@@ -143,3 +143,9 @@ $noise-uri: url("data:image/svg+xml;utf8,\
 @media (min-resolution: 2dppx) {
   .aurora-bg .dither { opacity: 0.18; background-size: 600px 600px; }
 }
+
+
+//Переменные
+$text-color: #ccb1ec;
+
+$font-famaly: roboto;
