--- a/src/components/movie-card/index.module.scss
+++ b/src/components/movie-card/index.module.scss
@@ -1,6 +1,13 @@
 .card {
   position: relative;
   overflow: hidden;
+  border-radius: 14px;
+  box-shadow: 0 0 0 0 rgba(255, 60, 200, .7);
+  transition: box-shadow .25s ease;
+
+  &:hover {
+    box-shadow: 0 0 14px 3px rgba(255, 60, 200, .9);
+  }
 }
 
 .rating {
