--- a/src/components/movie-card/index.module.scss
+++ b/src/components/movie-card/index.module.scss
@@ -11,13 +11,12 @@
 }
 
 .rating {
+  font: 600 14px/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
   position: absolute;
   top: 10px;
   right: 10px;
   background: rgba(255,60,200,.75);
   padding: 4px 7px;
-  font-size: 14px;
-  font-weight: 600;
   border-radius: 8px;
   backdrop-filter: blur(6px);
   z-index: 2;
