--- a/src/components/movie-grit/index.module.scss
+++ b/src/components/movie-grit/index.module.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
-  padding: 40px;
+  padding: 0 40px;
 }
 
 @media (max-width: 1200px) {
