--- a/src/components/search/index.module.scss
+++ b/src/components/search/index.module.scss
@@ -13,7 +13,7 @@
 }
 
 .searchInput {
-  margin: 30px 40px 0;
+  margin: 40px 40px;
   padding: 12px 20px;
   font-size: 16px;
   border-radius: 12px;
