--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -17,7 +17,7 @@
   max-width: 800px;
   line-height: 1.1;
   animation: slideInLeft 1s ease forwards;
-  padding: 40px 40px 0 40px;
+  padding: 40px 40px 40px 40px;
   margin: 80px 0 0 0 !important;
 }
 
@@ -29,6 +29,7 @@
           0 0 6px rgba(255, 60, 200, 0.6),
           0 0 12px rgba(255, 60, 200, 0.4);
   animation: slideInRight 1s ease forwards;
+  margin: 0 0 40px!important;
 }
 
 @keyframes slideInLeft {
