--- a/src/pages/favorite/index.module.scss
+++ b/src/pages/favorite/index.module.scss
@@ -1,4 +1,4 @@
-.home {
+.wrapper {
   display: flex;
   flex-direction: column;
   color: #fff;
@@ -6,7 +6,7 @@
   overflow: hidden;
 }
 
-.heroTitle {
+.title {
   font: 800 75px/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
   text-transform: uppercase;
   color: #fff;
@@ -21,7 +21,7 @@
   margin: 80px 0 0 0 !important;
 }
 
-.subTitle {
+.empty {
   font: 800 54px/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
   color: #fff;
   padding: 0 40px;
@@ -30,35 +30,4 @@
           0 0 12px rgba(255, 60, 200, 0.4);
   animation: slideInRight 1s ease forwards;
   margin: 0 0 40px!important;
-}
-
-@keyframes slideInLeft {
-  0% {
-    transform: translateX(-100%);
-    opacity: 0;
-    text-shadow: 0 0 0 rgba(255, 60, 200, 0);
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-    text-shadow:
-            0 0 8px rgba(255, 60, 200, 0.7),
-            0 0 16px rgba(255, 60, 200, 0.5),
-            0 0 32px rgba(255, 60, 200, 0.3);
-  }
-}
-
-@keyframes slideInRight {
-  0% {
-    transform: translateX(100%);
-    opacity: 0;
-    text-shadow: 0 0 0 rgba(255, 60, 200, 0);
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-    text-shadow:
-            0 0 6px rgba(255, 60, 200, 0.6),
-            0 0 12px rgba(255, 60, 200, 0.4);
-  }
 }
