--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,21 @@
 body {
   background-color: #0b0119;
 }
+
+html, body, #root {
+  height: 100%;
+}
+
+.page {
+  min-height: 100dvh;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex: 1 0 auto;
+}
+
+.footer {
+  margin-top: auto;
+}
