perf: reduce lag in Home page animations

--- a/src/pages/favorite/index.module.scss
+++ b/src/pages/favorite/index.module.scss
@@ -7,7 +7,7 @@
 }
 
 .title {
-  font: 800 75px/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
+  font: 650 7vw/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
   text-transform: uppercase;
   color: #fff;
   text-shadow:
