--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -6,6 +6,7 @@
   z-index: 100;
 }
 .nav {
+  will-change: transform, left, width;
   position: relative;
   padding: 1px;
   border-radius: 28px;
@@ -16,7 +17,6 @@
   -webkit-backdrop-filter: blur(14px) saturate(120%);
 }
 
-/* НЕОН ПО КОНТУРУ */
 .nav::before {
   content: "";
   position: absolute;
