--- a/src/index.scss
+++ b/src/index.scss
@@ -2,14 +2,29 @@ body {
   background-color: #0b0119;
 }
 
-html, body, #root {
-  height: 100%;
-}
-
-.page {
-  min-height: 100dvh;
+#root {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
+main {
+  flex: 1;
+}
+
+
+.page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
+
+
+body, html {
+  min-height: 100%;
 }
 
 .main {
