--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -7,58 +7,60 @@
 }
 
 .heroTitle {
-  font: 800 75px/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
+  font: 800 7vw/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
   text-transform: uppercase;
   color: #fff;
   text-shadow:
-          0 0 8px rgba(255, 60, 200, 0.7),
-          0 0 16px rgba(255, 60, 200, 0.5),
-          0 0 32px rgba(255, 60, 200, 0.3);
+          0 0 4px rgba(255, 60, 200, 0.6),
+          0 0 11px rgba(255, 60, 200, 0.5),
+          0 0 24px rgba(255, 60, 200, 0.3);
   max-width: 800px;
   line-height: 1.1;
   animation: slideInLeft 1s ease forwards;
   padding: 40px 40px 40px 40px;
   margin: 80px 0 0 0 !important;
+  will-change: transform, opacity;
 }
 
 .subTitle {
-  font: 800 54px/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
+  font: 800 5vw/1.1 'Roboto', system-ui, -apple-system, Segoe UI, Roboto, Inter, Arial, sans-serif;
   color: #fff;
   padding: 0 40px;
   text-shadow:
           0 0 6px rgba(255, 60, 200, 0.6),
-          0 0 12px rgba(255, 60, 200, 0.4);
+          0 0 10px rgba(255, 60, 200, 0.4);
   animation: slideInRight 1s ease forwards;
   margin: 0 0 40px!important;
+  will-change: transform, opacity;
 }
-
-@keyframes slideInLeft {
-  0% {
-    transform: translateX(-100%);
-    opacity: 0;
-    text-shadow: 0 0 0 rgba(255, 60, 200, 0);
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-    text-shadow:
-            0 0 8px rgba(255, 60, 200, 0.7),
-            0 0 16px rgba(255, 60, 200, 0.5),
-            0 0 32px rgba(255, 60, 200, 0.3);
-  }
-}
-
-@keyframes slideInRight {
-  0% {
-    transform: translateX(100%);
-    opacity: 0;
-    text-shadow: 0 0 0 rgba(255, 60, 200, 0);
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-    text-shadow:
-            0 0 6px rgba(255, 60, 200, 0.6),
-            0 0 12px rgba(255, 60, 200, 0.4);
-  }
-}
+//
+//@keyframes slideInLeft {
+//  0% {
+//    transform: translateX(-100%);
+//    opacity: 0;
+//    text-shadow: 0 0 0 rgba(255, 60, 200, 0);
+//  }
+//  100% {
+//    transform: translateX(0);
+//    opacity: 1;
+//    text-shadow:
+//            0 0 2px rgba(255, 60, 200, 0.7),
+//            0 0 16px rgba(255, 60, 200, 0.5),
+//            0 0 32px rgba(255, 60, 200, 0.3);
+//  }
+//}
+//
+//@keyframes slideInRight {
+//  0% {
+//    transform: translateX(100%);
+//    opacity: 0;
+//    text-shadow: 0 0 0 rgba(255, 60, 200, 0);
+//  }
+//  100% {
+//    transform: translateX(0);
+//    opacity: 1;
+//    text-shadow:
+//            0 0 6px rgba(255, 60, 200, 0.6),
+//            0 0 12px rgba(255, 60, 200, 0.4);
+//  }
+//}
